--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "postcss": "^8",
+    "stylelint": "^16.3.1",
+    "stylelint-config-clean-order": "^5.4.1",
+    "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
